opam-version: "1.2"
name: "pds-reachability"
version: "0.2.1+dev"
maintainer: "JHU PL Lab <pl.cs@jhu.edu>"
authors: [ "JHU PL Lab <pl.cs@jhu.edu>" ]
license: "Apache"
homepage: "https://github.com/JHU-PL-Lab/pds-reachability"
dev-repo: "https://github.com/JHU-PL-Lab/pds-reachability.git"
bug-reports: "https://github.com/JHU-PL-Lab/pds-reachability/issues"
build: [ "jbuilder" "build" "-p" name "-j" jobs ]
build-test: [ "jbuilder" "runtest" "-p" name "-j" jobs ]
depends: [
  "base-threads"
  "batteries"
  "jbuilder" {build & >= "1.0+beta17"}
  "jhupllib" {>= "0.1.1"}
  "ocaml-monadic"
  "ocamlbuild" {build}
  "ocamlfind" {build}
  "ounit" {build}
  "ppx_deriving" {>= "3.2"}
  "ppx_deriving_yojson" {>= "2.1"}
  "yojson"
]
