opam-version: "2.0"
name: "pds-reachability"
version: "0.2.3"
maintainer: "JHU PL Lab <pl.cs@jhu.edu>"
authors: [ "JHU PL Lab <pl.cs@jhu.edu>" ]
synopsis: "A PDS reachability query library"
description: "This library performs efficient reachability queries on abstractly specified push-down systems."
license: "Apache-2.0"
homepage: "https://github.com/JHU-PL-Lab/pds-reachability"
dev-repo: "git+https://github.com/JHU-PL-Lab/pds-reachability.git"
bug-reports: "https://github.com/JHU-PL-Lab/pds-reachability/issues"
build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]
depends: [
  "ocaml" {>= "4.08.0"}
  "base-threads"
  "batteries" {>= "3.0"}
  "dune" {build & >= "1.0"}
  "jhupllib" {>= "0.3"}
  "ocaml-monadic" {>= "0.4.1"}
  "ocamlbuild" {build}
  "ocamlfind" {build}
  "ounit" {build}
  "ppx_deriving" {>= "3.2"}
  "ppx_deriving_yojson" {>= "2.1"}
  "yojson" {>= "1.7.0"}
]
